--- a/expertoslipolisis-r/package.json
+++ b/expertoslipolisis-r/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.10.1",
     "axios": "^1.13.2",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.9.5"
+    "react-router-dom": "^7.9.5",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -26,6 +27,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
+    "patch-package": "^8.0.1",
     "vite": "^7.1.7"
   }
 }
